--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "homepage": "https://github.com/CGavrila/yan-crawler#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.1",
-    "load-grunt-tasks": "^3.2.0"
+    "load-grunt-tasks": "^3.2.0",
+    "grunt-ts": "^6.0.0-beta.3",
+    "typescript": "1.8.10"
   },
   "dependencies": {
     "cheerio": "^0.19.0",
