Port everything to Typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "compilerOptions": {
-        "listFiles": true,
-        "module":  "commonjs",
-        "sourceMap": true,
-        "outDir": "./dist",
-        "declaration": true
-    }
+  "compilerOptions": {
+    "listFiles": true,
+    "module":  "commonjs",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "declaration": true,
+    "moduleResolution": "node"
+  }
 }
