--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/CGavrila/yan-crawler#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
-    "load-grunt-tasks": "^3.2.0",
     "grunt-ts": "^6.0.0-beta.3",
+    "load-grunt-tasks": "^3.2.0",
+    "mocha": "^3.1.0",
+    "nock": "^8.0.0",
+    "sinon": "^1.17.6",
     "typescript": "1.8.10"
   },
   "dependencies": {
